Cleanup and add styles

--- a/mail-subscriptions-api/MailSubscriptionsApi/MailSubscriptionsApi/appsettings.Production.json
+++ b/mail-subscriptions-api/MailSubscriptionsApi/MailSubscriptionsApi/appsettings.Production.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "Data Source=db;Initial Catalog=Subscriptions;Integrated Security=false;User ID=sa;Password=abbTest123;"
+    "default": "Data Source=db;Initial Catalog=Subscriptions;Integrated Security=false;User ID=sa;Password=abbTest123;" //!!! it should never be kept like this - should be stored in environment variable
   }
 }
