--- a/mail-subscriptions-api/MailSubscriptionsApi/MailSubscriptionsApi/appsettings.json
+++ b/mail-subscriptions-api/MailSubscriptionsApi/MailSubscriptionsApi/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "Data Source=localhost;Initial Catalog=Subscriptions;Integrated Security=true;"
+    "default": "Data Source=localhost;Initial Catalog=Subscriptions;Integrated Security=true;" //it should not be kept like this - should be stored in environment variable
   },
-  "MailingService": "https://mailing-service-abb.herokuapp.com/mail"
+  "MailingService": "https://mailing-service-abb.herokuapp.com/mail" //this should be passed in environment variable
 }
