--- a/mail-subscriptions-api/MailSubscriptionsApi/MailSubscriptionsApi/appsettings.Development.json
+++ b/mail-subscriptions-api/MailSubscriptionsApi/MailSubscriptionsApi/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "default": "Data Source=localhost;Initial Catalog=Subscriptions;Integrated Security=true;"
   }
 }
